fixed editor save button overlap

--- a/content/css/item.scss
+++ b/content/css/item.scss
@@ -15,7 +15,7 @@ $md-background-100: #f5f5f5;
             min-width: 0;
             min-height: 0;
             line-height: normal;
-            margin-left: 0;
+            margin-left: -5px;
             color: $md-text-secondary;
             md-icon {
                 color: $md-text-secondary;
@@ -64,6 +64,9 @@ $md-background-100: #f5f5f5;
     margin-top: 15vh;
 }
 
+.content-editor {
+    margin-bottom: 5em;
+}
 
 /* common */
 
